--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{  "homepage": "http://github.com/parthmodhvadiya/my-app",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +12,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "build:staging": "env-cmd -f .env.staging npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
